--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -9,8 +9,11 @@
   <div class='separator'>
     <h4><%= _("Merge With This Article") %></h4>
     <div class=''>
-      <label for="merge_with">Article ID</label>
-      <input id="merge_with" name="merge_with" size="5" type="text" />
+      <% form_tag :action => 'merge' do %>
+        <%= label_tag :merge_with, "Article ID" %>
+        <%= text_field_tag :merge_with, '', :size => 5 %>
+        <%= submit_tag "Merge" %>
+      <% end %>
     </div>
   </div>
 <% end -%>      
