--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -5,11 +5,11 @@
 
 <% end %>
 
-<% if current_user.admin? -%>
+<% if current_user.admin? and @article != nil and @article.id != nil -%>
   <div class='separator'>
     <h4><%= _("Merge With This Article") %></h4>
     <div class=''>
-      <% form_tag :action => 'merge' do %>
+      <% form_tag ({:controller => "admin/content", :action => "merge", :id => @article.id}) do %>
         <%= label_tag :merge_with, "Article ID" %>
         <%= text_field_tag :merge_with, '', :size => 5 %>
         <%= submit_tag "Merge" %>
