--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -7,7 +7,7 @@
 
 <% if current_user.admin? and @article != nil and @article.id != nil -%>
   <div class='separator'>
-    <h4><%= _("Merge With This Article") %></h4>
+    <h4><%= _("Merge Articles") %></h4>
     <div class=''>
       <% form_tag ({:controller => "admin/content", :action => "merge", :id => @article.id}) do %>
         <%= label_tag :merge_with, "Article ID" %>
